[package]
name = "libproc"
version = "0.4.1"
description = "A rust wrapper of libproc to get information about running processes - currently Mac OS X only"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
repository = "https://github.com/andrewdavidmackenzie/libproc-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
errno = "^0.2"
libc = "^0.2"

[lib]
name = "libproc"
path = "src/lib.rs"
